<resources>
    <string name="app_name">Covid_19_App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_country_with_name">Search Country with Name</string>
    <string name="total">Total</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="critical">Critical</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="track_all_country">Track All Country</string>
    <string name="name">Name</string>
    <string name="cases">Cases</string>
</resources>