<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="image"
            type="com.example.covid_19_app.model.CountryListModelItem" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="25dp"
        android:background="@color/Metropolis"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:background="@color/AirForceBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_height="250dp"
            tools:ignore="NewApi">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/tv_countryName"
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="@string/total"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/active"/>
                <TextView
                    android:id="@+id/tv_activeCases"
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="@string/total"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/cases"/>
                <TextView
                    android:id="@+id/tv_casesTotal"
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="@string/total"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/recovered"/>
                <TextView
                    android:id="@+id/recovered"
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="@string/total"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/deaths"/>
                <TextView
                    android:id="@+id/deaths"
                    style="@style/tv16RobotoRegularWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="@string/total"/>

            </LinearLayout>





        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_flag"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/linearlayout"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>